Maintain API compatibility.